html and css updated. header complete

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="header">
         <img src="images/dog-logo.jpg" alt="paw logo">
         <ul class="header-links">
-            <li><a href="google.com">About</a></li>
-            <li><a href="google.com">Testimonials</a></li>
-            <li><a href="google.com">Contact Us</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Testimonials</a></li>
+            <li><a href="">Contact Us</a></li>
         </ul>
     </div>
     <div class="main">
