html and css updated, main completed, image deleted

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         </ul>
     </div>
     <div class="main">
-        <h1>The team you can count on after a ruff day!</h1>
-            <p>These are some of the goodest bois, creating quality content all dedicated to making human's smile.</p>
-        <div class="button">Sign Up!</div>
-        <img src="images/lab-sitting.jpg" alt="chocolate lab sitting">
+        <div class="container">
+            <h1 class="h1">The team you can count on after a ruff day!</h1>
+                <p class="p1">These are some of the goodest bois, creating quality content all dedicated to making human's smile.</p>
+            <div class="button">Sign Up!</div>
+        </div>
+        <img src="images/office-dog.jpg" alt="tan bulldog with glasses">
     </div>
     <div class="team">Meet the Pups</div>
         <div class="info">
@@ -41,11 +43,11 @@
         </div>
     </div>
     <div class="quote">
-        <h1>"As an intern, I'm not 100% sure what I'm doing here but this couch sure is comfy."</h1>
+        <h1 class="h2">"As an intern, I'm not 100% sure what I'm doing here but this couch sure is comfy."</h1>
             <p>-Doug, Senior Intern</p>
     </div>
     <div class="sign-up">
-        <h1>It's time! Sign up now!</h1>
+        <h1 class="h3">It's time! Sign up now!</h1>
         <p>Sign up now to recieve the latest info on the best bois in the business!</p>
     <div class="button">Sign Up!</div>
     </div>
