--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         <div class="container">
             <h1 class="h1">The team you can count on after a ruff day!</h1>
                 <p class="p1">These are some of the goodest bois, creating quality content all dedicated to making human's smile.</p>
-            <div class="button">Sign Up!</div>
+            <a href="" class="button">Sign Up!</a>
         </div>
         <img src="images/office-dog.jpg" alt="tan bulldog with glasses">
     </div>
-    <div class="team">Meet the Pups</div>
+
+    <div class="title">Meet the Pups</div>
+
+    <div class="team">
         <div class="info">
             <img src="images/branch-dog.jpg" alt="dog with branch">
             <div class="text">The Branch Manager</div>
@@ -42,9 +45,10 @@
             <div class="text">Doug</div>
         </div>
     </div>
+
     <div class="quote">
         <h1 class="h2">"As an intern, I'm not 100% sure what I'm doing here but this couch sure is comfy."</h1>
-            <p>-Doug, Senior Intern</p>
+        <p class="p2">-Doug, Senior Intern</p>
     </div>
     <div class="sign-up">
         <h1 class="h3">It's time! Sign up now!</h1>
