html and css updated, sign up and footer completed

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div class="main">
         <div class="container">
             <h1 class="h1">The team you can count on after a ruff day!</h1>
-                <p class="p1">These are some of the goodest bois, creating quality content all dedicated to making human's smile.</p>
-            <a href="" class="button">Sign Up!</a>
+                <p class="p1">These are some of the best pups, creating quality content, all dedicated to making the world smile.</p>
+            <a href="" class="button1">Sign Up!</a>
         </div>
         <img src="images/office-dog.jpg" alt="tan bulldog with glasses">
     </div>
 
-    <div class="title">Meet the Pups</div>
+    <div class="title">Meet the Family</div>
 
     <div class="team">
         <div class="info">
@@ -50,10 +50,14 @@
         <h1 class="h2">"As an intern, I'm not 100% sure what I'm doing here but this couch sure is comfy."</h1>
         <p class="p2">-Doug, Senior Intern</p>
     </div>
-    <div class="sign-up">
-        <h1 class="h3">It's time! Sign up now!</h1>
-        <p>Sign up now to recieve the latest info on the best bois in the business!</p>
-    <div class="button">Sign Up!</div>
+    <div class= "container2">
+        <div class="sign-up">
+            <div>
+                <h3>It's time! Sign up now!</h3>
+                <p>Sign up now to recieve the latest info on the best bois in the business!</p>
+            </div>    
+            <a href="" class="button2">Sign Up!</a>
+        </div>
     </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
 </body>
